--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </main>
 
     <script>
-        const apiKey = ""; // Пустая строка для окружения
+        const apiKey = "AIzaSyCnM7Tr3s5niyTzZQXYfu4aJkCvosg5v1M"; // Пустая строка для окружения
 
         async function generateAIContent() {
             const input = document.getElementById('ai-input').value;
